--- a/README
+++ b/README
@@ -20,7 +20,7 @@ Here are some examples of usage:
   @obfuscated_ips = do_obfu($infile, "10.0.0.0/8", $outfile);
 
   use NetAddr::IP::Obfuscate;
-  do_obfu("STDIN", "10.0.0.0/8", "STDOUT");
+  do_obfu("-", "10.0.0.0/8", "STDOUT");
 
   cat /tmp/somecompany.nsr | \
   perl -MNetAddr::IP::Obfuscate -e 'do_obfu()' > /tmp/sample.nsr
@@ -32,10 +32,11 @@ NetAddr::IP::Obfuscate exports one function, do_obfu().
   @obfuscated_ips = do_obfu ($infile, $network, $outfile);
 
 There is a no argument form of do_obfu, that assigns default values to
-all its parameters. The first, the input file, is set to "STDIN", the
-second, the network range used for replacement, is set to
-"10.0.0.0/8", and the last, the output file, is set to "STDOUT". This
-form is particularly useful for something like this one-liner:
+all its parameters. The first, the input file, is set to "-" (reads
+from STDIN), the second, the network range used for replacement, is
+set to "10.0.0.0/8", and the last, the output file, is set to
+"STDOUT". This form is particularly useful for something like this
+one-liner:
 
   cat /tmp/somecompany.nsr | \
   perl -MNetAddr::IP::Obfuscate -e 'do_obfu()' > /tmp/sample.nsr
@@ -46,7 +47,7 @@ IP's from the range 10.0.0.0/8, and write the result out to
 
 In the three-argument version, the first argument is the input text
 file, presumably containing IP addresses, that we will be
-obfuscating. Use the string "STDIN" to read from standard input.
+obfuscating. Use the string "-" to read from standard input.
 
 The second argument is a network address, which should be given in
 CIDR notation, and really represents a range of IP addresses from
@@ -64,10 +65,6 @@ standard output.
 do_obfu returns the total number of IP addresses replaced if it is
 called in a scalar context, or a list of the obfuscated IP addresses,
 if called in a list context.
-
-Using File::Slurp in do_obfu gets error checking on the file reads and
-writes for free, and also means that the file slurping/burping is
-fast.
 
 INSTALLATION
 
